# plai

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml
docs/: notes.md
src/: agents.py  app.py  crew.py  main.py  playlist_params.py  tasks.py
src/config/: agents.yaml  tasks.yaml
src/tools/: music_analysis_tools.py  parameter_tools.py  playlist_tools.py  preferences_collector.py  youtube_tools.py
