[tool.poetry]
name = "plai"
version = "0.1.0"
description = "Generate your own playlist with AI"
authors = ["RubenGlez <ruben.daren@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
crewai = "^0.76.9"
langchain-openai = "^0.2.4"
streamlit = "^1.39.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.7.1"

[tool.poetry.scripts]
format = "black:main"
lint = "ruff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
