[project]
name = "plai"
version = "0.1.0"
description = "Generate your own playlist with AI"
authors = [{ name = "RubenGlez", email = "ruben.daren@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0",
    "langchain-openai>=0.2.6",
    "python-dotenv>=1.0.1",
]

[project.scripts]
run_crew = "src.main:run"
train = "src.main:train"
replay = "src.main:replay"
test = "src.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build]
only-packages = true
